Bug 136589 - FILEOPEN: DOCX: incorrect page break
Summary: FILEOPEN: DOCX: incorrect page break
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-09-08 21:45 UTC by Xisco Faulí
Modified: 2020-09-29 15:03 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-09-08 21:45:13 UTC
Steps to reproduce:
1. Open attachment 92282 [details] from bug 73546

-> There is an empty page at page 2. See screenshot

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: 6b2eff7d69c6e14d89dd33eaa58c01d82c541266
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-09-08 21:46:28 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=538898d6b9a70d593d9e061f83bed1bffd3987c5

author	Justin Luth <justin.luth@collabora.com>	2020-07-30 09:50:27 +0300
committer	Justin Luth <justin_luth@sil.org>	2020-08-08 19:31:50 +0200
commit 538898d6b9a70d593d9e061f83bed1bffd3987c5 (patch)
tree d357dbc78ac3e884d1b01d496279335a91a27359
parent c8b7a833c8f195facf225d062adc762a07ea55b9 (diff)
related tdf#135216 writerfilter: don't bRemove para with field

Bisected with: bibisect-linux64-7.1

Adding Cc: to Justin Luth
Comment 2 Justin L 2020-09-09 10:23:44 UTC
Exposed a problem where a field in a footer doesn't reset the HasField variable when the footer is finished - so the next paragraph wrongly assumes a field. The problem is that it doesn't run ::finishParagraph because it is discarded.

Not too bad of a regression, because round-tripping it again removes that empty page (since there is no footer shown, the footer with the field is thrown away).

proposed fix at http://gerrit.libreoffice.org/c/core/+/102314
Comment 3 Commit Notification 2020-09-09 13:57:22 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a0d2e45f2efbe4e82b78c777d21b5eabec3a0924

tdf#136589 writerfilter: reset ParaHadField

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-09-29 15:03:51 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: cd85546a2fbdade42f80fd3b6bd650791db9f32d
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: tr-TR (en_US.UTF-8); UI: en-US
Calc: threaded

@Justin Luth, thanks for fixing this issue!